--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Controle - Matheus</title>
+    <title>Sistema de Gestão e Controle</title>
+	<meta property="og:title" content="Sistema de Gestão e Controle - Thiago Rodrigues">
+	<meta property="og:description" content="A ferramenta pra quem precisa gerenciar e controlar um sistema financeiro, empresarial ou pessoal.">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
