--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Gestão e Controle</title>
-	<meta property="og:title" content="Sistema de Gestão e Controle - Thiago Rodrigues">
+    <title>ControlXpert - Sistema de Gestão e Controle</title>
+	<meta property="og:title" content="ControlXpert - Sistema de Gestão e Controle - Thiago Rodrigues">
 	<meta property="og:description" content="A ferramenta pra quem precisa gerenciar e controlar um sistema financeiro, empresarial ou pessoal.">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/styles.css">
