--- a/index.html
+++ b/index.html
@@ -533,6 +533,30 @@
         </div>
     </div>
 
+    <!-- Modal de Licença -->
+    <div id="licenseModal" class="modal license-modal">
+        <div class="modal-content">
+            <h2>ControlXpert 2025</h2>
+            <div class="license-info">
+                <p><strong>Bem-vindo ao Sistema de Gestão</strong></p>
+                <p>Por favor, insira sua chave de licença para continuar</p>
+                <p class="license-format">Formato: XXXX-XXXX-XXXX</p>
+            </div>
+            <form id="licenseForm">
+                <div class="form-group">
+                    <input type="text" id="licenseKey" required placeholder="XXXX-XXXX-XXXX" maxlength="14" autocomplete="off">
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="save-btn">Ativar Licença</button>
+                </div>
+            </form>
+            <div class="license-support">
+                <p>Desenvolvido por Thiago F. Rodrigues</p>
+                <p>Dúvidas e Suporte: <a href="mailto:throdrigf@gmail.com">throdrigf@gmail.com</a></p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
