--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
                     <label for="productName">Nome do Produto</label>
                     <input type="text" id="productName" required>
                 </div>
+                <div class="form-group size-field-container" style="display: none;">
+                    <label for="productSize">Tamanho</label>
+                    <select id="productSize" class="product-size-select">
+                        <option value="">Selecione o tamanho</option>
+                    </select>
+                </div>
                 <div class="form-group">
                     <label for="productQuantity">Quantidade</label>
                     <input type="number" id="productQuantity" required>
@@ -329,6 +335,12 @@
                         <option value="">Selecione um produto</option>
                     </select>
                 </div>
+                <div class="form-group size-field-container" style="display: none;">
+                    <label for="transactionProductSize">Tamanho</label>
+                    <select id="transactionProductSize" class="product-size-select">
+                        <option value="">Selecione o tamanho</option>
+                    </select>
+                </div>
                 <div class="form-group">
                     <label for="transactionProductQuantity">Quantidade</label>
                     <input type="number" id="transactionProductQuantity" required min="1">
@@ -348,6 +360,12 @@
                 <div class="form-group">
                     <label for="otherProductName">Nome do Produto</label>
                     <input type="text" id="otherProductName" required>
+                </div>
+                <div class="form-group size-field-container" style="display: none;">
+                    <label for="otherProductSize">Tamanho</label>
+                    <select id="otherProductSize" class="product-size-select">
+                        <option value="">Selecione o tamanho</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="otherProductQuantity">Quantidade</label>
@@ -431,6 +449,12 @@
                         <option value="">Selecione um produto</option>
                     </select>
                 </div>
+                <div class="form-group size-field-container" style="display: none;">
+                    <label for="orderProductSize">Tamanho</label>
+                    <select id="orderProductSize" class="product-size-select">
+                        <option value="">Selecione o tamanho</option>
+                    </select>
+                </div>
                 <div class="form-group">
                     <label for="orderProductQuantity">Quantidade</label>
                     <input type="number" id="orderProductQuantity" min="1" required>
@@ -450,6 +474,12 @@
                 <div class="form-group">
                     <label for="otherProductName">Nome do Produto</label>
                     <input type="text" id="otherProductName" required>
+                </div>
+                <div class="form-group size-field-container" style="display: none;">
+                    <label for="otherOrderProductSize">Tamanho</label>
+                    <select id="otherOrderProductSize" class="product-size-select">
+                        <option value="">Selecione o tamanho</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="otherProductQuantity">Quantidade</label>
